--- a/style.css
+++ b/style.css
@@ -10,3 +10,60 @@ body {
 }
 
 /* Add styles here! */
+h1 {
+  font-size: 2rem;
+  font-weight: 800;
+  margin-bottom: 48px;
+}
+
+header {
+  margin-top: 96px;
+  margin-bottom: 64px;
+}
+
+h2 {
+  font-size: 1.5rem;
+  font-weight: 800;
+}
+
+p {
+  font-weight: 400;
+  font-size: 1.25rem;
+  margin-bottom: 16px;
+}
+
+strong {
+  color: hsl(160, 100%, 30%);
+}
+
+main {
+  padding-top: 64px;
+  padding-bottom: 58px;
+  background-color: hsl(0, 0%, 40%);
+  border-top: 8px solid hsl(0, 0%, 60%);
+}
+
+.max-width-wrapper {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 800px;
+}
+
+.intro-chunk {
+  max-width: 500px;
+  padding: 24px;
+}
+
+.card {
+  background-color: white;
+  border-bottom: 8px solid hsl(0, 0%, 60%);
+  padding: 24px;
+}
+
+.indented-heading {
+  background-color: hsl(45, 100%, 50%);
+  border-bottom: 8px solid hsl(45, 100%, 40%);
+  margin-top: -16px;
+  margin-left: -32px;
+  padding: 16px 32px;
+}
